--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
     <module>max-live-user</module>
     <module>max-live-common</module>
       <module>max-live-redis-starter</module>
+      <module>max-live-id-generate</module>
+    <module>max-live-id-generate/max-live-id-generate-provider</module>
   </modules>
 
 <!--  版本控制-->
