--- a/max-live-user/max-live-user-provider/src/main/resources/application.yml
+++ b/max-live-user/max-live-user-provider/src/main/resources/application.yml
@@ -45,7 +45,7 @@ dubbo:
 maxlive:
   sms:
     ccp:
-      test: true
+      test: false
       ServerIP: app.cloopen.com
       Port: 8883
       accountSid: 2c94811c946f6bfb0194df8a10f70887
