2025/2/20 更新：测试了局域网连接

--- a/max-live-api/pom.xml
+++ b/max-live-api/pom.xml
@@ -48,6 +48,11 @@
             <artifactId>max-live-user-interface</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.max</groupId>
+            <artifactId>max-live-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
