--- a/max-live-incident/max-live-incident-provider/pom.xml
+++ b/max-live-incident/max-live-incident-provider/pom.xml
@@ -5,12 +5,13 @@
         <groupId>com.max</groupId>
         <artifactId>max-live</artifactId>
         <version>1.0</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>max-live-api</artifactId>
+    <artifactId>max-live-incident-provider</artifactId>
     <packaging>jar</packaging>
 
-    <name>max-live-api</name>
+    <name>max-live-incident-provider</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -22,6 +23,12 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
 
@@ -43,11 +50,26 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
+
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>${mybatis-plus.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>com.max</groupId>
-            <artifactId>max-live-user-interface</artifactId>
-            <version>${project.version}</version>
+            <artifactId>max-live-redis-starter</artifactId>
+            <version>1.0</version>
         </dependency>
+
         <dependency>
             <groupId>com.max</groupId>
             <artifactId>max-live-incident-interface</artifactId>
@@ -59,16 +81,4 @@
             <version>${project.version}</version>
         </dependency>
     </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>3.0.4</version>
-                <configuration>
-                    <classifier>exec</classifier>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 </project>
