feat(公告模块): 新增公告相关接口并优化查询功能
- 新增公告保存、更新和删除接口
- 重构公告查询接口，支持分页和排序
- 新增公告VO类，用于前端展示
- 优化公告DTO类，添加创建时间字段
- 更新数据库映射和SQL语句，支持新功能

--- a/max-live-api/src/main/resources/application.yml
+++ b/max-live-api/src/main/resources/application.yml
@@ -20,11 +20,14 @@ dubbo:
   application:
     name: ${spring.application.name}
     qos-enable: false
+    check-serializable: false
   registry:
     address: nacos://${ECS.ip}:8848?namespace=max-live
     id: nacos-registry
   protocol:
     name: dubbo
     port: -1
+
+
 
 debug: true
